// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Jira App Components Location: APP_CONFIG, Component: <App /> should go through the installation flow successfully 1`] = `
<div
  data-test-id="oauth-content"
>
  <p
    class="Paragraph__Paragraph___2aO-9 paragraph-light"
    data-test-id="cf-ui-paragraph"
  >
    Your Jira session will expire soon. Reauthenticate now to continue uninterrupted.
    <br />
    <br />
  </p>
  <button
    class="Button__Button___1ZfFj a11y__focus-border--default___60AXp Button__Button--primary___JImeO Button__Button--full-width___3Fmpo"
    data-test-id="oauth-button"
    type="button"
  >
    <span
      class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
      tabindex="-1"
    >
      <span
        class="Button__Button__label___3tcOj"
      >
        Reauthenticate
      </span>
    </span>
  </button>
</div>
`;

exports[`The Jira App Components Location: APP_CONFIG, Component: <App /> should go through the installation flow successfully 2`] = `
<div
  class="content-types-config"
  data-test-id="content-types"
>
  <div
    class="FieldGroup__FieldGroup___2mLmO"
    data-test-id="cf-ui-field-group"
  >
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-article"
      >
        <input
          aria-label="Article"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="Article"
          name="Article"
          type="checkbox"
          value="article"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="Article"
          >
            Article
          </label>
        </div>
      </div>
    </div>
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-author"
      >
        <input
          aria-label="Author"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="Author"
          name="Author"
          type="checkbox"
          value="author"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="Author"
          >
            Author
          </label>
        </div>
      </div>
    </div>
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-cloudinaryImage"
      >
        <input
          aria-label="BynderImage"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="BynderImage"
          name="BynderImage"
          type="checkbox"
          value="cloudinaryImage"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="BynderImage"
          >
            BynderImage
          </label>
        </div>
      </div>
    </div>
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-cta"
      >
        <input
          aria-label="CTA"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="CTA"
          name="CTA"
          type="checkbox"
          value="cta"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="CTA"
          >
            CTA
          </label>
        </div>
      </div>
    </div>
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-text"
      >
        <input
          aria-label="Featured"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="Featured"
          name="Featured"
          type="checkbox"
          value="text"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="Featured"
          >
            Featured
          </label>
        </div>
      </div>
    </div>
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-heroImage"
      >
        <input
          aria-label="Hero Image"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="Hero Image"
          name="Hero Image"
          type="checkbox"
          value="heroImage"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="Hero Image"
          >
            Hero Image
          </label>
        </div>
      </div>
    </div>
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-imageCarousel"
      >
        <input
          aria-label="Image Carousel"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="Image Carousel"
          name="Image Carousel"
          type="checkbox"
          value="imageCarousel"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="Image Carousel"
          >
            Image Carousel
          </label>
        </div>
      </div>
    </div>
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-imageWithFocalPoint"
      >
        <input
          aria-label="Image with Focal Point"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="Image with Focal Point"
          name="Image with Focal Point"
          type="checkbox"
          value="imageWithFocalPoint"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="Image with Focal Point"
          >
            Image with Focal Point
          </label>
        </div>
      </div>
    </div>
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-imageWithMoreFocalPoints"
      >
        <input
          aria-label="Image with Focal Points"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="Image with Focal Points"
          name="Image with Focal Points"
          type="checkbox"
          value="imageWithMoreFocalPoints"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="Image with Focal Points"
          >
            Image with Focal Points
          </label>
        </div>
      </div>
    </div>
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-page"
      >
        <input
          aria-label="Page"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="Page"
          name="Page"
          type="checkbox"
          value="page"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="Page"
          >
            Page
          </label>
        </div>
      </div>
    </div>
    <div
      class="FieldGroup__FieldGroup__item___2qkC3"
    >
      <div
        class="ControlledInputField__ControlledInputField___2uIG9"
        data-test-id="ct-item-variationContainer"
      >
        <input
          aria-label="Variation Container"
          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
          data-test-id="cf-ui-controlled-input"
          id="Variation Container"
          name="Variation Container"
          type="checkbox"
          value="variationContainer"
        />
        <div>
          <label
            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
            data-test-id="cf-ui-form-label"
            for="Variation Container"
          >
            Variation Container
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Jira App Components Location: APP_CONFIG, Component: <App /> should go through the installation flow successfully 3`] = `false`;

exports[`The Jira App Components Location: APP_CONFIG, Component: <App /> should setReady and go through the oauth flow successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="app"
      >
        <div
          class="background"
        />
        <div
          class="body"
        >
          <div
            class="config"
          >
            <div
              class="Typography__Typography___1ZUfE"
              data-test-id="cf-ui-text-container"
            >
              <h1
                class="Heading__Heading___83D3K f36-margin-bottom--m"
                data-test-id="cf-ui-heading"
              >
                Connect Jira
              </h1>
              <p
                class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                data-test-id="cf-ui-paragraph"
              >
                Connect your Jira instance to Contentful to link Contentful entries to Jira issues.
              </p>
              <div
                data-test-id="oauth-content"
              >
                <button
                  class="Button__Button___1ZfFj a11y__focus-border--default___60AXp Button__Button--primary___JImeO Button__Button--full-width___3Fmpo"
                  data-test-id="oauth-button"
                  type="button"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                    tabindex="-1"
                  >
                    <span
                      class="Button__Button__label___3tcOj"
                    >
                      Connect to Jira
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="logo"
        >
          <header>
            <img
              alt="Jira Software"
              src="logo.svg"
            />
          </header>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="app"
    >
      <div
        class="background"
      />
      <div
        class="body"
      >
        <div
          class="config"
        >
          <div
            class="Typography__Typography___1ZUfE"
            data-test-id="cf-ui-text-container"
          >
            <h1
              class="Heading__Heading___83D3K f36-margin-bottom--m"
              data-test-id="cf-ui-heading"
            >
              Connect Jira
            </h1>
            <p
              class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
              data-test-id="cf-ui-paragraph"
            >
              Connect your Jira instance to Contentful to link Contentful entries to Jira issues.
            </p>
            <div
              data-test-id="oauth-content"
            >
              <button
                class="Button__Button___1ZfFj a11y__focus-border--default___60AXp Button__Button--primary___JImeO Button__Button--full-width___3Fmpo"
                data-test-id="oauth-button"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                  tabindex="-1"
                >
                  <span
                    class="Button__Button__label___3tcOj"
                  >
                    Connect to Jira
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="logo"
      >
        <header>
          <img
            alt="Jira Software"
            src="logo.svg"
          />
        </header>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components Location: APP_CONFIG, Component: <App /> should setReady and go through the oauth flow successfully 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="app"
      >
        <div
          class="background"
        />
        <div
          class="body"
        >
          <div
            class="config"
          >
            <div
              class="configuration"
              data-test-id="configuration"
            >
              <div
                class="Typography__Typography___1ZUfE"
                data-test-id="cf-ui-text-container"
              >
                <h1
                  class="Heading__Heading___83D3K f36-margin-bottom--m"
                  data-test-id="cf-ui-heading"
                >
                  Configure
                </h1>
                <p
                  class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                  data-test-id="cf-ui-paragraph"
                >
                  Select the Jira site and project you want to connect
                </p>
                <div
                  class="jira-config"
                  data-test-id="instance-step"
                >
                  <div
                    class="Select__Select__wrapper___2pBIz Select__Select--full___7ei7d selector"
                  >
                    <select
                      class="Select__Select___31Z46 a11y__focus-border--default___60AXp"
                      data-test-id="instance-selector"
                    >
                      <option
                        data-test-id="cf-ui-select-option"
                        value=""
                      >
                        Select a site
                      </option>
                    </select>
                    <svg
                      class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Select__Select__icon___boRAZ"
                      data-test-id="cf-ui-icon"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </div>
                  <div
                    class="search-projects"
                  >
                    <div
                      class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
                    >
                      <input
                        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
                        data-test-id="cf-ui-text-input"
                        placeholder="Search for a project"
                        value=""
                      />
                    </div>
                    <div
                      class="search-projects-results"
                    />
                  </div>
                </div>
              </div>
              <div
                class="section"
              >
                <div
                  class="Typography__Typography___1ZUfE"
                  data-test-id="cf-ui-text-container"
                >
                  <h1
                    class="Heading__Heading___83D3K f36-margin-bottom--m"
                    data-test-id="cf-ui-heading"
                  >
                    Get Jira companion app
                  </h1>
                  <p
                    class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                    data-test-id="cf-ui-paragraph"
                  >
                    The companion app must be installed in your Jira instance in order for Contentful to link to Jira issues.
                  </p>
                  <p
                    class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                    data-test-id="cf-ui-paragraph"
                  >
                    <button
                      class="Button__Button___1ZfFj a11y__focus-border--default___60AXp Button__Button--primary___JImeO"
                      data-test-id="cf-ui-button"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                        tabindex="-1"
                      >
                        <span
                          class="Button__Button__label___3tcOj"
                        >
                          Get companion app for Jira Cloud
                        </span>
                      </span>
                    </button>
                    <br />
                  </p>
                </div>
              </div>
              <div
                class="Typography__Typography___1ZUfE"
                data-test-id="cf-ui-text-container"
              >
                <h1
                  class="Heading__Heading___83D3K f36-margin-bottom--m"
                  data-test-id="cf-ui-heading"
                >
                  Assign to content types
                </h1>
                <p
                  class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                  data-test-id="cf-ui-paragraph"
                >
                  Pick the content types where Jira will install to the sidebar.
                </p>
                <div
                  class="content-types-config"
                  data-test-id="content-types"
                >
                  <div
                    class="FieldGroup__FieldGroup___2mLmO"
                    data-test-id="cf-ui-field-group"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="logo"
        >
          <header>
            <img
              alt="Jira Software"
              src="logo.svg"
            />
          </header>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="app"
    >
      <div
        class="background"
      />
      <div
        class="body"
      >
        <div
          class="config"
        >
          <div
            class="configuration"
            data-test-id="configuration"
          >
            <div
              class="Typography__Typography___1ZUfE"
              data-test-id="cf-ui-text-container"
            >
              <h1
                class="Heading__Heading___83D3K f36-margin-bottom--m"
                data-test-id="cf-ui-heading"
              >
                Configure
              </h1>
              <p
                class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                data-test-id="cf-ui-paragraph"
              >
                Select the Jira site and project you want to connect
              </p>
              <div
                class="jira-config"
                data-test-id="instance-step"
              >
                <div
                  class="Select__Select__wrapper___2pBIz Select__Select--full___7ei7d selector"
                >
                  <select
                    class="Select__Select___31Z46 a11y__focus-border--default___60AXp"
                    data-test-id="instance-selector"
                  >
                    <option
                      data-test-id="cf-ui-select-option"
                      value=""
                    >
                      Select a site
                    </option>
                  </select>
                  <svg
                    class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Select__Select__icon___boRAZ"
                    data-test-id="cf-ui-icon"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </div>
                <div
                  class="search-projects"
                >
                  <div
                    class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
                  >
                    <input
                      class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
                      data-test-id="cf-ui-text-input"
                      placeholder="Search for a project"
                      value=""
                    />
                  </div>
                  <div
                    class="search-projects-results"
                  />
                </div>
              </div>
            </div>
            <div
              class="section"
            >
              <div
                class="Typography__Typography___1ZUfE"
                data-test-id="cf-ui-text-container"
              >
                <h1
                  class="Heading__Heading___83D3K f36-margin-bottom--m"
                  data-test-id="cf-ui-heading"
                >
                  Get Jira companion app
                </h1>
                <p
                  class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                  data-test-id="cf-ui-paragraph"
                >
                  The companion app must be installed in your Jira instance in order for Contentful to link to Jira issues.
                </p>
                <p
                  class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                  data-test-id="cf-ui-paragraph"
                >
                  <button
                    class="Button__Button___1ZfFj a11y__focus-border--default___60AXp Button__Button--primary___JImeO"
                    data-test-id="cf-ui-button"
                    type="button"
                  >
                    <span
                      class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                      tabindex="-1"
                    >
                      <span
                        class="Button__Button__label___3tcOj"
                      >
                        Get companion app for Jira Cloud
                      </span>
                    </span>
                  </button>
                  <br />
                </p>
              </div>
            </div>
            <div
              class="Typography__Typography___1ZUfE"
              data-test-id="cf-ui-text-container"
            >
              <h1
                class="Heading__Heading___83D3K f36-margin-bottom--m"
                data-test-id="cf-ui-heading"
              >
                Assign to content types
              </h1>
              <p
                class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
                data-test-id="cf-ui-paragraph"
              >
                Pick the content types where Jira will install to the sidebar.
              </p>
              <div
                class="content-types-config"
                data-test-id="content-types"
              >
                <div
                  class="FieldGroup__FieldGroup___2mLmO"
                  data-test-id="cf-ui-field-group"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="logo"
      >
        <header>
          <img
            alt="Jira Software"
            src="logo.svg"
          />
        </header>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components Location: ENTRY_SIDEBAR, Component: <Jira /> should load the sidebar app and show linked issues 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="Card__Card___xXJsT jira-ticket Card__Card--padding-default___b6Brl"
          data-test-id="cf-ui-card"
        >
          <div
            class="primary"
          >
            <div
              class="top"
            >
              <div
                class="Tag__Tag___Y-myd tag Tag__Tag--muted___1Uba5"
                data-test-id="cf-ui-tag"
              >
                To Do
              </div>
              <div
                class="Dropdown__Dropdown___1qyn8"
                data-test-id="cf-ui-dropdown"
                position="bottom-right"
              >
                <button
                  class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--secondary___3Gc3d"
                  data-test-id="cf-ui-icon-button"
                  type="button"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                    tabindex="-1"
                  >
                    <svg
                      class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                      data-test-id="cf-ui-icon"
                      height="18"
                      viewBox="0 0 24 24"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                    <span
                      class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                    >
                      Actions
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              data-test-id="issue-summary"
            >
              <button
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 summary TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  Test issue 1
                </span>
              </button>
            </div>
          </div>
          <div
            class="meta"
          >
            <div
              class="status"
            >
              <span
                class="Tooltip__Tooltip__target-wrapper___Mtw42"
              >
                <img
                  alt="Task"
                  class="type"
                  src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111111/secure/viewavatar?size=medium&avatarId=10318&avatarType=issuetype"
                />
              </span>
              <span
                class="Tooltip__Tooltip__target-wrapper___Mtw42"
              >
                <img
                  alt="Medium"
                  height="22"
                  src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111111/images/icons/priorities/medium.svg"
                />
              </span>
            </div>
            <div
              class="details"
            >
              <button
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  <span
                    class="key"
                  >
                    KEY-50
                  </span>
                </span>
              </button>
              <span
                class="Tooltip__Tooltip__target-wrapper___Mtw42"
              >
                <img
                  alt="Dean Anderson"
                  class="avatar"
                  data-test-id="issue-assignee"
                  height="22"
                  src="https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/111111111111111111111111/11111111-1111-1111-1111-111111111113/128?size=24&s=24"
                />
              </span>
            </div>
          </div>
        </div>
        <div
          class="Card__Card___xXJsT jira-ticket Card__Card--padding-default___b6Brl"
          data-test-id="cf-ui-card"
        >
          <div
            class="primary"
          >
            <div
              class="top"
            >
              <div
                class="Tag__Tag___Y-myd tag Tag__Tag--muted___1Uba5"
                data-test-id="cf-ui-tag"
              >
                To Do
              </div>
              <div
                class="Dropdown__Dropdown___1qyn8"
                data-test-id="cf-ui-dropdown"
                position="bottom-right"
              >
                <button
                  class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--secondary___3Gc3d"
                  data-test-id="cf-ui-icon-button"
                  type="button"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                    tabindex="-1"
                  >
                    <svg
                      class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                      data-test-id="cf-ui-icon"
                      height="18"
                      viewBox="0 0 24 24"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                    <span
                      class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                    >
                      Actions
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              data-test-id="issue-summary"
            >
              <button
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 summary TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  Update getting started page to reflect new release
                </span>
              </button>
            </div>
          </div>
          <div
            class="meta"
          >
            <div
              class="status"
            >
              <span
                class="Tooltip__Tooltip__target-wrapper___Mtw42"
              >
                <img
                  alt="Story"
                  class="type"
                  src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111111/secure/viewavatar?size=medium&avatarId=10315&avatarType=issuetype"
                />
              </span>
              <span
                class="Tooltip__Tooltip__target-wrapper___Mtw42"
              >
                <img
                  alt="Medium"
                  height="22"
                  src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111111/images/icons/priorities/medium.svg"
                />
              </span>
            </div>
            <div
              class="details"
            >
              <button
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  <span
                    class="key"
                  >
                    KEY-47
                  </span>
                </span>
              </button>
              <span
                class="Tooltip__Tooltip__target-wrapper___Mtw42"
              >
                <img
                  alt="Fabian Schultz"
                  class="avatar"
                  data-test-id="issue-assignee"
                  height="22"
                  src="https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5dcc3f7705b5ae0ddd6fe79e/f2395ed2-b511-4f9a-8744-640e0b6f94a0/128?size=24&s=24"
                />
              </span>
            </div>
          </div>
        </div>
        <div
          class="search"
        >
          <div
            class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
          >
            <input
              class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
              data-test-id="jira-issue-search"
              placeholder="Search for Jira issues to link"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-hidden="true"
        class="Tooltip__Tooltip___32xAi Tooltip__Tooltip--place-right___H8LiN Tooltip__Tooltip--hidden___3uqEe"
        contenteditable="false"
        data-test-id="cf-ui-tooltip"
        role="tooltip"
        style="max-width: 360px;"
      >
        <div
          class="InViewport__InViewport___2o6g4"
          data-test-id="cf-ui-in-viewport"
          offset="0"
        >
          Task
        </div>
      </div>
    </div>
    <div>
      <div
        aria-hidden="true"
        class="Tooltip__Tooltip___32xAi Tooltip__Tooltip--place-right___H8LiN Tooltip__Tooltip--hidden___3uqEe"
        contenteditable="false"
        data-test-id="cf-ui-tooltip"
        role="tooltip"
        style="max-width: 360px;"
      >
        <div
          class="InViewport__InViewport___2o6g4"
          data-test-id="cf-ui-in-viewport"
          offset="0"
        >
          Medium priority
        </div>
      </div>
    </div>
    <div>
      <div
        aria-hidden="true"
        class="Tooltip__Tooltip___32xAi Tooltip__Tooltip--place-left___1_Rl2 Tooltip__Tooltip--hidden___3uqEe"
        contenteditable="false"
        data-test-id="cf-ui-tooltip"
        role="tooltip"
        style="max-width: 360px;"
      >
        <div
          class="InViewport__InViewport___2o6g4"
          data-test-id="cf-ui-in-viewport"
          offset="0"
        >
          Assignee: Dean Anderson
        </div>
      </div>
    </div>
    <div>
      <div
        aria-hidden="true"
        class="Tooltip__Tooltip___32xAi Tooltip__Tooltip--place-right___H8LiN Tooltip__Tooltip--hidden___3uqEe"
        contenteditable="false"
        data-test-id="cf-ui-tooltip"
        role="tooltip"
        style="max-width: 360px;"
      >
        <div
          class="InViewport__InViewport___2o6g4"
          data-test-id="cf-ui-in-viewport"
          offset="0"
        >
          Story
        </div>
      </div>
    </div>
    <div>
      <div
        aria-hidden="true"
        class="Tooltip__Tooltip___32xAi Tooltip__Tooltip--place-right___H8LiN Tooltip__Tooltip--hidden___3uqEe"
        contenteditable="false"
        data-test-id="cf-ui-tooltip"
        role="tooltip"
        style="max-width: 360px;"
      >
        <div
          class="InViewport__InViewport___2o6g4"
          data-test-id="cf-ui-in-viewport"
          offset="0"
        >
          Medium priority
        </div>
      </div>
    </div>
    <div>
      <div
        aria-hidden="true"
        class="Tooltip__Tooltip___32xAi Tooltip__Tooltip--place-left___1_Rl2 Tooltip__Tooltip--hidden___3uqEe"
        contenteditable="false"
        data-test-id="cf-ui-tooltip"
        role="tooltip"
        style="max-width: 360px;"
      >
        <div
          class="InViewport__InViewport___2o6g4"
          data-test-id="cf-ui-in-viewport"
          offset="0"
        >
          Assignee: Fabian Schultz
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="Card__Card___xXJsT jira-ticket Card__Card--padding-default___b6Brl"
        data-test-id="cf-ui-card"
      >
        <div
          class="primary"
        >
          <div
            class="top"
          >
            <div
              class="Tag__Tag___Y-myd tag Tag__Tag--muted___1Uba5"
              data-test-id="cf-ui-tag"
            >
              To Do
            </div>
            <div
              class="Dropdown__Dropdown___1qyn8"
              data-test-id="cf-ui-dropdown"
              position="bottom-right"
            >
              <button
                class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--secondary___3Gc3d"
                data-test-id="cf-ui-icon-button"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                  tabindex="-1"
                >
                  <svg
                    class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                    data-test-id="cf-ui-icon"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                  >
                    Actions
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            data-test-id="issue-summary"
          >
            <button
              class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 summary TextLink__TextLink--primary___2Vc9F"
              data-test-id="cf-ui-text-link"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty"
                tabindex="-1"
              >
                Test issue 1
              </span>
            </button>
          </div>
        </div>
        <div
          class="meta"
        >
          <div
            class="status"
          >
            <span
              class="Tooltip__Tooltip__target-wrapper___Mtw42"
            >
              <img
                alt="Task"
                class="type"
                src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111111/secure/viewavatar?size=medium&avatarId=10318&avatarType=issuetype"
              />
            </span>
            <span
              class="Tooltip__Tooltip__target-wrapper___Mtw42"
            >
              <img
                alt="Medium"
                height="22"
                src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111111/images/icons/priorities/medium.svg"
              />
            </span>
          </div>
          <div
            class="details"
          >
            <button
              class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
              data-test-id="cf-ui-text-link"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty"
                tabindex="-1"
              >
                <span
                  class="key"
                >
                  KEY-50
                </span>
              </span>
            </button>
            <span
              class="Tooltip__Tooltip__target-wrapper___Mtw42"
            >
              <img
                alt="Dean Anderson"
                class="avatar"
                data-test-id="issue-assignee"
                height="22"
                src="https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/111111111111111111111111/11111111-1111-1111-1111-111111111113/128?size=24&s=24"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        class="Card__Card___xXJsT jira-ticket Card__Card--padding-default___b6Brl"
        data-test-id="cf-ui-card"
      >
        <div
          class="primary"
        >
          <div
            class="top"
          >
            <div
              class="Tag__Tag___Y-myd tag Tag__Tag--muted___1Uba5"
              data-test-id="cf-ui-tag"
            >
              To Do
            </div>
            <div
              class="Dropdown__Dropdown___1qyn8"
              data-test-id="cf-ui-dropdown"
              position="bottom-right"
            >
              <button
                class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--secondary___3Gc3d"
                data-test-id="cf-ui-icon-button"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                  tabindex="-1"
                >
                  <svg
                    class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                    data-test-id="cf-ui-icon"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                  >
                    Actions
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            data-test-id="issue-summary"
          >
            <button
              class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 summary TextLink__TextLink--primary___2Vc9F"
              data-test-id="cf-ui-text-link"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty"
                tabindex="-1"
              >
                Update getting started page to reflect new release
              </span>
            </button>
          </div>
        </div>
        <div
          class="meta"
        >
          <div
            class="status"
          >
            <span
              class="Tooltip__Tooltip__target-wrapper___Mtw42"
            >
              <img
                alt="Story"
                class="type"
                src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111111/secure/viewavatar?size=medium&avatarId=10315&avatarType=issuetype"
              />
            </span>
            <span
              class="Tooltip__Tooltip__target-wrapper___Mtw42"
            >
              <img
                alt="Medium"
                height="22"
                src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111111/images/icons/priorities/medium.svg"
              />
            </span>
          </div>
          <div
            class="details"
          >
            <button
              class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
              data-test-id="cf-ui-text-link"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty"
                tabindex="-1"
              >
                <span
                  class="key"
                >
                  KEY-47
                </span>
              </span>
            </button>
            <span
              class="Tooltip__Tooltip__target-wrapper___Mtw42"
            >
              <img
                alt="Fabian Schultz"
                class="avatar"
                data-test-id="issue-assignee"
                height="22"
                src="https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/5dcc3f7705b5ae0ddd6fe79e/f2395ed2-b511-4f9a-8744-640e0b6f94a0/128?size=24&s=24"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        class="search"
      >
        <div
          class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
        >
          <input
            class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
            data-test-id="jira-issue-search"
            placeholder="Search for Jira issues to link"
            value=""
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components Location: ENTRY_SIDEBAR, Component: <Jira /> should search for entries and allow linking 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="Typography__Typography___1ZUfE"
          data-test-id="cf-ui-text-container"
        >
          <p
            class="Paragraph__Paragraph___2aO-9 paragraph-light f36-margin-bottom--m"
            data-test-id="cf-ui-paragraph"
          >
            No Jira issues are linked to this entry
          </p>
        </div>
        <div
          class="search"
        >
          <div
            class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
          >
            <input
              class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
              data-test-id="jira-issue-search"
              placeholder="Search for Jira issues to link"
              value="MKE-1389"
            />
          </div>
          <div
            class="Card__Card___xXJsT search-card Card__Card--padding-none___1Jrxi Card__Card--is-interactive___dMQtf"
            data-test-id="search-result-issue"
          >
            <div>
              <span
                class="Tooltip__Tooltip__target-wrapper___Mtw42"
              >
                <img
                  alt="Story"
                  class="type"
                  src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111112/secure/viewavatar?size=medium&avatarId=10315&avatarType=issuetype"
                />
              </span>
            </div>
            <div>
              Jira app for Contentful
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-hidden="true"
        class="Tooltip__Tooltip___32xAi Tooltip__Tooltip--place-bottom___3qAh6 Tooltip__Tooltip--hidden___3uqEe"
        contenteditable="false"
        data-test-id="cf-ui-tooltip"
        role="tooltip"
        style="max-width: 360px;"
      >
        <div
          class="InViewport__InViewport___2o6g4"
          data-test-id="cf-ui-in-viewport"
          offset="0"
        >
          Story: MKE-1389
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="Typography__Typography___1ZUfE"
        data-test-id="cf-ui-text-container"
      >
        <p
          class="Paragraph__Paragraph___2aO-9 paragraph-light f36-margin-bottom--m"
          data-test-id="cf-ui-paragraph"
        >
          No Jira issues are linked to this entry
        </p>
      </div>
      <div
        class="search"
      >
        <div
          class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
        >
          <input
            class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
            data-test-id="jira-issue-search"
            placeholder="Search for Jira issues to link"
            value="MKE-1389"
          />
        </div>
        <div
          class="Card__Card___xXJsT search-card Card__Card--padding-none___1Jrxi Card__Card--is-interactive___dMQtf"
          data-test-id="search-result-issue"
        >
          <div>
            <span
              class="Tooltip__Tooltip__target-wrapper___Mtw42"
            >
              <img
                alt="Story"
                class="type"
                src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111112/secure/viewavatar?size=medium&avatarId=10315&avatarType=issuetype"
              />
            </span>
          </div>
          <div>
            Jira app for Contentful
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components Location: ENTRY_SIDEBAR, Component: <Jira /> should search for entries and allow linking 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="Card__Card___xXJsT jira-ticket Card__Card--padding-default___b6Brl"
          data-test-id="cf-ui-card"
        >
          <div
            class="primary"
          >
            <div
              class="top"
            >
              <div
                class="Tag__Tag___Y-myd tag Tag__Tag--warning___3Bet2"
                data-test-id="cf-ui-tag"
              >
                In progress
              </div>
              <div
                class="Dropdown__Dropdown___1qyn8"
                data-test-id="cf-ui-dropdown"
                position="bottom-right"
              >
                <button
                  class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--secondary___3Gc3d"
                  data-test-id="cf-ui-icon-button"
                  type="button"
                >
                  <span
                    class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                    tabindex="-1"
                  >
                    <svg
                      class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                      data-test-id="cf-ui-icon"
                      height="18"
                      viewBox="0 0 24 24"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                    <span
                      class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                    >
                      Actions
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              data-test-id="issue-summary"
            >
              <button
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 summary TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  Jira app for Contentful
                </span>
              </button>
            </div>
          </div>
          <div
            class="meta"
          >
            <div
              class="status"
            >
              <span
                class="Tooltip__Tooltip__target-wrapper___Mtw42"
              >
                <img
                  alt="Story"
                  class="type"
                  src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111112/secure/viewavatar?size=medium&avatarId=10315&avatarType=issuetype"
                />
              </span>
              <span
                class="Tooltip__Tooltip__target-wrapper___Mtw42"
              >
                <img
                  alt="Medium"
                  height="22"
                  src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111112/images/icons/priorities/medium.svg"
                />
              </span>
            </div>
            <div
              class="details"
            >
              <button
                class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                data-test-id="cf-ui-text-link"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty"
                  tabindex="-1"
                >
                  <span
                    class="key"
                  >
                    MKE-1389
                  </span>
                </span>
              </button>
              <span
                class="Tooltip__Tooltip__target-wrapper___Mtw42"
              >
                <img
                  alt="Dean Anderson"
                  class="avatar"
                  data-test-id="issue-assignee"
                  height="22"
                  src="https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/111111111111111111111111/11111111-1111-1111-1111-111111111113/128?size=24&s=24"
                />
              </span>
            </div>
          </div>
        </div>
        <div
          class="search"
        >
          <div
            class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
          >
            <input
              class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
              data-test-id="jira-issue-search"
              placeholder="Search for Jira issues to link"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        aria-hidden="true"
        class="Tooltip__Tooltip___32xAi Tooltip__Tooltip--place-right___H8LiN Tooltip__Tooltip--hidden___3uqEe"
        contenteditable="false"
        data-test-id="cf-ui-tooltip"
        role="tooltip"
        style="max-width: 360px;"
      >
        <div
          class="InViewport__InViewport___2o6g4"
          data-test-id="cf-ui-in-viewport"
          offset="0"
        >
          Story
        </div>
      </div>
    </div>
    <div>
      <div
        aria-hidden="true"
        class="Tooltip__Tooltip___32xAi Tooltip__Tooltip--place-right___H8LiN Tooltip__Tooltip--hidden___3uqEe"
        contenteditable="false"
        data-test-id="cf-ui-tooltip"
        role="tooltip"
        style="max-width: 360px;"
      >
        <div
          class="InViewport__InViewport___2o6g4"
          data-test-id="cf-ui-in-viewport"
          offset="0"
        >
          Medium priority
        </div>
      </div>
    </div>
    <div>
      <div
        aria-hidden="true"
        class="Tooltip__Tooltip___32xAi Tooltip__Tooltip--place-left___1_Rl2 Tooltip__Tooltip--hidden___3uqEe"
        contenteditable="false"
        data-test-id="cf-ui-tooltip"
        role="tooltip"
        style="max-width: 360px;"
      >
        <div
          class="InViewport__InViewport___2o6g4"
          data-test-id="cf-ui-in-viewport"
          offset="0"
        >
          Assignee: Dean Anderson
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="Card__Card___xXJsT jira-ticket Card__Card--padding-default___b6Brl"
        data-test-id="cf-ui-card"
      >
        <div
          class="primary"
        >
          <div
            class="top"
          >
            <div
              class="Tag__Tag___Y-myd tag Tag__Tag--warning___3Bet2"
              data-test-id="cf-ui-tag"
            >
              In progress
            </div>
            <div
              class="Dropdown__Dropdown___1qyn8"
              data-test-id="cf-ui-dropdown"
              position="bottom-right"
            >
              <button
                class="IconButton__IconButton___1_XeU a11y__focus-outline--default___2hwb1 IconButton__IconButton--secondary___3Gc3d"
                data-test-id="cf-ui-icon-button"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty IconButton__IconButton__inner___3fnmT"
                  tabindex="-1"
                >
                  <svg
                    class="Icon__Icon___38Epv Icon__Icon--small___1yGZK undefined IconButton__IconButton__icon___3yZQN"
                    data-test-id="cf-ui-icon"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="IconButton__IconButton__label___1kp5y helpers__sr-only___3Kv3z"
                  >
                    Actions
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            data-test-id="issue-summary"
          >
            <button
              class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 summary TextLink__TextLink--primary___2Vc9F"
              data-test-id="cf-ui-text-link"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty"
                tabindex="-1"
              >
                Jira app for Contentful
              </span>
            </button>
          </div>
        </div>
        <div
          class="meta"
        >
          <div
            class="status"
          >
            <span
              class="Tooltip__Tooltip__target-wrapper___Mtw42"
            >
              <img
                alt="Story"
                class="type"
                src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111112/secure/viewavatar?size=medium&avatarId=10315&avatarType=issuetype"
              />
            </span>
            <span
              class="Tooltip__Tooltip__target-wrapper___Mtw42"
            >
              <img
                alt="Medium"
                height="22"
                src="https://api.atlassian.com/ex/jira/11111111-1111-1111-1111-111111111112/images/icons/priorities/medium.svg"
              />
            </span>
          </div>
          <div
            class="details"
          >
            <button
              class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
              data-test-id="cf-ui-text-link"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty"
                tabindex="-1"
              >
                <span
                  class="key"
                >
                  MKE-1389
                </span>
              </span>
            </button>
            <span
              class="Tooltip__Tooltip__target-wrapper___Mtw42"
            >
              <img
                alt="Dean Anderson"
                class="avatar"
                data-test-id="issue-assignee"
                height="22"
                src="https://avatar-management--avatars.us-west-2.prod.public.atl-paas.net/111111111111111111111111/11111111-1111-1111-1111-111111111113/128?size=24&s=24"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        class="search"
      >
        <div
          class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
        >
          <input
            class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
            data-test-id="jira-issue-search"
            placeholder="Search for Jira issues to link"
            value=""
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components Location: ENTRY_SIDEBAR, Component: <Jira /> should show an empty list when the resource returns nothing 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="Typography__Typography___1ZUfE"
          data-test-id="cf-ui-text-container"
        >
          <p
            class="Paragraph__Paragraph___2aO-9 paragraph-light f36-margin-bottom--m"
            data-test-id="cf-ui-paragraph"
          >
            No Jira issues are linked to this entry
          </p>
        </div>
        <div
          class="search"
        >
          <div
            class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
          >
            <input
              class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
              data-test-id="jira-issue-search"
              placeholder="Search for Jira issues to link"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="Typography__Typography___1ZUfE"
        data-test-id="cf-ui-text-container"
      >
        <p
          class="Paragraph__Paragraph___2aO-9 paragraph-light f36-margin-bottom--m"
          data-test-id="cf-ui-paragraph"
        >
          No Jira issues are linked to this entry
        </p>
      </div>
      <div
        class="search"
      >
        <div
          class="TextInput__TextInput___36-K- TextInput__TextInput--full___1EJEW"
        >
          <input
            class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
            data-test-id="jira-issue-search"
            placeholder="Search for Jira issues to link"
            value=""
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`The Jira App Components Location: ENTRY_SIDEBAR, Component: <Jira /> should show an unauthorized message when given a 403 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Note__Note___2eSKN Note__Note--negative___3fkwL"
        data-test-id="cf-ui-note"
      >
        <div
          class="Note__Note__icon___20RqC"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--negative___1dled"
            data-test-id="cf-ui-icon"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
        </div>
        <div>
          <div
            class="Note__Note__title___2nwpx"
          >
            Unauthorized
          </div>
          <div>
            Your Jira account does not have permission to view the issues in this project.
             
            <button
              class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
              data-test-id="cf-ui-text-link"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty"
                tabindex="-1"
              >
                Sign out
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Note__Note___2eSKN Note__Note--negative___3fkwL"
      data-test-id="cf-ui-note"
    >
      <div
        class="Note__Note__icon___20RqC"
      >
        <svg
          class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--negative___1dled"
          data-test-id="cf-ui-icon"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div>
        <div
          class="Note__Note__title___2nwpx"
        >
          Unauthorized
        </div>
        <div>
          Your Jira account does not have permission to view the issues in this project.
           
          <button
            class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
            data-test-id="cf-ui-text-link"
            type="button"
          >
            <span
              class="TabFocusTrap__TabFocusTrap___39Vty"
              tabindex="-1"
            >
              Sign out
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
